--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.siccity.gltfutility": "https://github.com/Siccity/GLTFUtility.git",
+    "com.unity.ai.navigation": "1.1.6",
     "com.unity.collab-proxy": "2.4.4",
     "com.unity.editorcoroutines": "1.0.0",
     "com.unity.ext.nunit": "1.0.6",
